# SWeather

./: .gitignore  CMakeLists.txt  License.txt  README.md  SimpleWeatherConfigure.h.in  clean_build.cmake  main.c  main.h  sakabrew.sh
CJson/: CMakeLists.txt
GetWeather/: CMakeLists.txt  getweather.c  getweather.h
Location/: CMakeLists.txt  location.c  location.h
ParseWeather/: CMakeLists.txt  forecast.c  parseweather.c  parseweather.h  tool.h
assets/: city.txt  sweather.json
module/: init.cmake
src/: CMakeLists.txt  china-city-list.txt  city.txt  getweather.c  getweather.h  location.c  location.h  log_info.c  log_info.h  main.c  main.h  strcut_info.h
src/CJson/: CMakeLists.txt  cJSON.h
src/CharSytleWeather/: basicInfo.c  basicInfo.h  dailyForecast.c  dailyForecast.h  lifeStyle.c  lifeStyle.h  printerUtil.c  printerUtil.h  updateTime.c  updateTime.h  weatherPrinter.c  weather_condition.h
src/GetWeather/: getweather.h
src/Location/: location.c  location.h
src/ParseWeather/: CMakeLists.txt  parseweather.c  parseweather.h  printweather.c  printweather.h  tool.c
