add_library(mycjson cJSON.c)
IF (WIN32)
    MESSAGE(STATUS "Your system is win32,Don't need to link math.h")
ELSEIF (APPLE)
    MESSAGE(STATUS " Your system is osx,Don't need to link math.h")
ELSE ()
    MESSAGE(STATUS " Your system is unix,Need to link math.h")
    target_link_libraries(mycjson m)
ENDIF (WIN32)
install(TARGETS mycjson DESTINATION bin)
install(FILES cJSON.h DESTINATION include)